# TriviaNetflix

./: README.md  final.html  index.html  juego.html  menu.html  package.json  pyproject.toml
assets/: estilo.css
data/: PreguntasConImagenYSonido.json  PreguntasYRespuestas.json
notebooks/: demoRAG.ipynb
src/js/: final.js  index.js  juego.js  menu.js
src/py/: config.py  document_searcher.py  json_processor.py  main.py  nlp_processor.py  qa_processor.py  respuestas_trivia.json  text_splitter.py  trivia_processor.py  utils.py
