[tool.poetry]
name = "triviatflixproject"
version = "0.1.0"
description = ""
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf2 = "^3.0.1"
jupyter = "^1.0.0"
jupyterlab = "^4.2.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.6"
langchain = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
